linkeo entre html

--- a/paginas/consultoria.html
+++ b/paginas/consultoria.html
@@ -68,12 +68,12 @@
      
      <h1 class="my-2 mx-3">CONSULTORÍA</h1> 
      
-     <section class="container-fluid mx-3">
+     <section class="container mx-3">
        <div class="row">
           <div class="col-lg-5 col-md-5 col-sm-12 bg-primary">
             <h3>¿Querés saber en que estado esta tu empresa y que plan de acción te recomendamos?<br>¿Necesitas que te acompañemos en la implementación de la gestion de calidad?</h3>
           </div>
-          <div class="col-lg-7 col-md-7 col-sm-12 bg-primary w-50">
+          <div class="col-lg-7 col-md-7 col-sm-12 bg-primary w-90">
             <img src="../imagenes/consultoria.jpg" alt="imagen consultores" class="consultoria w-100">
           </div>
         </div>
