--- a/paginas/academia.html
+++ b/paginas/academia.html
@@ -9,7 +9,7 @@
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,14 +62,14 @@
 
     </header>
 
-    <main class="mainAcademia">
+    <main class="mainSubpagina">
      
      
-        <h1 class="mx-5 my-2">ACADEMIA CALIDAD CAMPUS</h1> 
+        <h1 class="mx-5 my-2 p-2">ACADEMIA</h1> 
         <h2 class="mx-5 my-5">Nuestros Cursos</h2>
         <section class="container-fluid">
           <div class="row">
-              <div class="col-lg-3 col-md-12 col-sm-12 bg-light">
+              <div class="col-lg-3 col-md-12 col-sm-12 bg-$color-principal">
                 <div class="card mx-5 border border-dark" style="width: 18rem;">
                   <img src="../imagenes/cursoiso9001.png" class="card-img-top" alt="Curso ISO">
                   <div class="card-body">
@@ -79,7 +79,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-12 col-sm-12 bg-light">
+              <div class="col-lg-3 col-md-12 col-sm-12 bg-$color-principal">
                 <div class="card mx-5 border border-dark" style="width: 18rem;">
                   <img src="../imagenes/cursoprocesos.png" class="card-img-top" alt="Curso ISO">
                   <div class="card-body">
@@ -89,7 +89,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-12 col-sm-12 bg-light">
+              <div class="col-lg-3 col-md-12 col-sm-12 bg-$color-principal">
                 <div class="card mx-5 border border-dark" style="width: 18rem;">
                   <img src="../imagenes/cursolean.png" class="card-img-top" alt="Lean Manufacturing">
                   <div class="card-body">
@@ -99,7 +99,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-12 col-sm-12 bg-light">
+              <div class="col-lg-3 col-md-12 col-sm-12 bg-$color-principal">
                 <div class="card mx-5 border border-dark" style="width: 18rem;">
                   <img src="../imagenes/cursokpi.png" class="card-img-top" alt="Curso ISO">
                   <div class="card-body">
@@ -114,7 +114,7 @@
 
         </section>
         <h2 class="mx-5 my-5">Preguntas Frecuentes</h2>
-       <section class="my-5">
+       <section class="my-5  p-5">
         <div class="accordion mx-5" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
@@ -136,7 +136,7 @@
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>Tarjeta de crédito o Crypto</strong> Todos nuestros cursos se pueden pagar con tarjeta de crédito en un pago o realizando el pago con Cryptomonedas.
+                <strong>Tarjeta de crédito o Cryptomonedas.</strong> Todos nuestros cursos se pueden pagar con tarjeta de crédito en un pago o realizando el pago con Cryptomonedas.
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>No desesperes</strong> Te llegara un mail (revisa tambien correo no deseado) con todos los detalles para que ingreses a la plataforma y empieces tu formación.
+                <strong>No desesperes.</strong> Te llegara un mail (revisa tambien correo no deseado) con todos los detalles para que ingreses a la plataforma y empieces tu formación.
               </div>
             </div>
           </div>
