--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,7 +9,7 @@
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +66,7 @@
     <main class="mainSubpagina">
      
 
-      <h1 class="my-3 mx-5">CONTACTANOS</h1>  
+      <h1 class="my-3 mx-5 p-2">CONTACTANOS</h1>  
       <h3 class="my-3 mx-5">Puedes enviarnos tu consulta ya sea de la Academia <br>o sobre la consultoria y te responderemos a la brevedad</h2>
      
       <div class="mb-3 mx-5">
